--- a/index.html
+++ b/index.html
@@ -1,1 +1,226 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>StayGreen - Keep Your Screen Awake</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+        .gradient-bg {
+            background: linear-gradient(135deg, #f0fdf4, #dcfce7, #f0fdf4);
+        }
+        .feature-card {
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .feature-card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+        }
+    </style>
+</head>
+<body class="bg-slate-50 text-slate-800">
 
+    <!-- Header -->
+    <header class="bg-white/80 backdrop-blur-lg sticky top-0 z-50 border-b border-slate-200">
+        <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
+            <div class="flex items-center space-x-3">
+                <div class="bg-green-500 p-2 rounded-full">
+                    <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z"></path></svg>
+                </div>
+                <h1 class="text-2xl font-bold text-slate-900">StayGreen</h1>
+            </div>
+            <div class="flex items-center space-x-4">
+                <a href="#features" class="text-slate-600 hover:text-green-600 font-medium">Features</a>
+                <a href="#how-it-works" class="text-slate-600 hover:text-green-600 font-medium">How It Works</a>
+                <a href="#" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg shadow-md hover:shadow-lg transition-all duration-300">
+                    Download
+                </a>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <main class="gradient-bg">
+        <section class="container mx-auto px-6 py-24 md:py-32 flex flex-col md:flex-row items-center">
+            <div class="md:w-1/2 text-center md:text-left">
+                <h2 class="text-4xl md:text-6xl font-extrabold text-slate-900 leading-tight mb-4">
+                    Keep Your Screen Awake.
+                    <span class="text-green-600">The Smart Way.</span>
+                </h2>
+                <p class="text-lg text-slate-600 mb-8 max-w-xl mx-auto md:mx-0">
+                    StayGreen simulates realistic user activity to prevent your computer from sleeping. Perfect for remote work, presentations, and long-running tasks. No extra software needed on your PC!
+                </p>
+                <div class="flex justify-center md:justify-start space-x-4">
+                    <a href="#" class="bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300 flex items-center space-x-2">
+                        <i data-lucide="download"></i>
+                        <span>Get on Google Play</span>
+                    </a>
+                    <a href="#" class="bg-white hover:bg-slate-100 text-slate-700 font-bold py-3 px-6 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300 flex items-center space-x-2">
+                        <i data-lucide="github"></i>
+                        <span>View on GitHub</span>
+                    </a>
+                </div>
+            </div>
+            <div class="md:w-1/2 mt-12 md:mt-0 flex justify-center">
+                <img src="https://placehold.co/450x600/34d399/ffffff?text=App+Screenshot" alt="StayGreen App Screenshot" class="rounded-2xl shadow-2xl" onerror="this.onerror=null;this.src='https://placehold.co/450x600/e2e8f0/475569?text=Image+Not+Found';">
+            </div>
+        </section>
+    </main>
+
+    <!-- Features Section -->
+    <section id="features" class="py-24 bg-white">
+        <div class="container mx-auto px-6">
+            <div class="text-center mb-16">
+                <h3 class="text-4xl font-bold text-slate-900 mb-3">Why You'll Love StayGreen</h3>
+                <p class="text-lg text-slate-500">Everything you need to keep your digital presence active and secure.</p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <!-- Feature 1 -->
+                <div class="bg-slate-50 p-8 rounded-2xl feature-card border border-slate-200">
+                    <div class="bg-green-100 text-green-600 w-16 h-16 rounded-full flex items-center justify-center mb-6">
+                        <i data-lucide="mouse-pointer-2" class="w-8 h-8"></i>
+                    </div>
+                    <h4 class="text-2xl font-bold mb-3">Realistic Simulation</h4>
+                    <p class="text-slate-600">Generates human-like mouse movements, curved paths, scrolling, and typing to appear genuinely active.</p>
+                </div>
+                <!-- Feature 2 -->
+                <div class="bg-slate-50 p-8 rounded-2xl feature-card border border-slate-200">
+                    <div class="bg-green-100 text-green-600 w-16 h-16 rounded-full flex items-center justify-center mb-6">
+                        <i data-lucide="sliders-horizontal" class="w-8 h-8"></i>
+                    </div>
+                    <h4 class="text-2xl font-bold mb-3">Fully Customizable</h4>
+                    <p class="text-slate-600">Fine-tune everything. Adjust action delays, typo rates, text profiles, and mouse behavior to fit your needs.</p>
+                </div>
+                <!-- Feature 3 -->
+                <div class="bg-slate-50 p-8 rounded-2xl feature-card border border-slate-200">
+                    <div class="bg-green-100 text-green-600 w-16 h-16 rounded-full flex items-center justify-center mb-6">
+                        <i data-lucide="zap" class="w-8 h-8"></i>
+                    </div>
+                    <h4 class="text-2xl font-bold mb-3">Pro Power-Ups</h4>
+                    <p class="text-slate-600">Unlock advanced features like action clustering, custom Bluetooth device names, and undetectable simulation patterns.</p>
+                </div>
+                <!-- Feature 4 -->
+                <div class="bg-slate-50 p-8 rounded-2xl feature-card border border-slate-200">
+                    <div class="bg-green-100 text-green-600 w-16 h-16 rounded-full flex items-center justify-center mb-6">
+                        <i data-lucide="bluetooth" class="w-8 h-8"></i>
+                    </div>
+                    <h4 class="text-2xl font-bold mb-3">Driverless Bluetooth HID</h4>
+                    <p class="text-slate-600">Works as a standard Bluetooth Keyboard/Mouse. No drivers or special software needed on your host computer (PC, Mac, Linux).</p>
+                </div>
+                <!-- Feature 5 -->
+                <div class="bg-slate-50 p-8 rounded-2xl feature-card border border-slate-200">
+                    <div class="bg-green-100 text-green-600 w-16 h-16 rounded-full flex items-center justify-center mb-6">
+                        <i data-lucide="shield-check" class="w-8 h-8"></i>
+                    </div>
+                    <h4 class="text-2xl font-bold mb-3">Privacy Focused</h4>
+                    <p class="text-slate-600">Runs 100% locally on your phone. It doesn't read your screen or require invasive permissions. Your data stays yours.</p>
+                </div>
+                <!-- Feature 6 -->
+                <div class="bg-slate-50 p-8 rounded-2xl feature-card border border-slate-200">
+                    <div class="bg-green-100 text-green-600 w-16 h-16 rounded-full flex items-center justify-center mb-6">
+                        <i data-lucide="battery-charging" class="w-8 h-8"></i>
+                    </div>
+                    <h4 class="text-2xl font-bold mb-3">Energy Efficient</h4>
+                    <p class="text-slate-600">Designed to be lightweight and run in the background with a persistent notification, using minimal battery.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- How It Works Section -->
+    <section id="how-it-works" class="py-24 bg-slate-100">
+        <div class="container mx-auto px-6">
+            <div class="text-center mb-16">
+                <h3 class="text-4xl font-bold text-slate-900 mb-3">Get Started in Three Easy Steps</h3>
+                <p class="text-lg text-slate-500">No complex setup. Just pair and go.</p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
+                <!-- Step 1 -->
+                <div class="relative px-4">
+                    <div class="bg-green-500 text-white w-16 h-16 rounded-full flex items-center justify-center text-2xl font-bold mx-auto mb-6">1</div>
+                    <h4 class="text-xl font-semibold mb-2">Install & Open</h4>
+                    <p class="text-slate-600">Download StayGreen from the Google Play Store and open it on your Android device.</p>
+                    <div class="hidden md:block absolute top-8 left-1/2 w-full h-0.5 bg-slate-300" style="transform: translateX(50%);"></div>
+                </div>
+                <!-- Step 2 -->
+                <div class="relative px-4">
+                     <div class="bg-green-500 text-white w-16 h-16 rounded-full flex items-center justify-center text-2xl font-bold mx-auto mb-6">2</div>
+                    <h4 class="text-xl font-semibold mb-2">Pair via Bluetooth</h4>
+                    <p class="text-slate-600">Enable advertising in the app and pair your phone with your computer just like any Bluetooth device.</p>
+                    <div class="hidden md:block absolute top-8 left-1/2 w-full h-0.5 bg-slate-300" style="transform: translateX(50%);"></div>
+                </div>
+                <!-- Step 3 -->
+                <div class="relative px-4">
+                     <div class="bg-green-500 text-white w-16 h-16 rounded-full flex items-center justify-center text-2xl font-bold mx-auto mb-6">3</div>
+                    <h4 class="text-xl font-semibold mb-2">Start Activity</h4>
+                    <p class="text-slate-600">Press the "Start Activity" button. Your computer now sees an active user. That's it!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <!-- Use Cases Section -->
+    <section id="use-cases" class="py-24 bg-white">
+        <div class="container mx-auto px-6">
+            <div class="text-center mb-16">
+                <h3 class="text-4xl font-bold text-slate-900 mb-3">Perfect For...</h3>
+                <p class="text-lg text-slate-500">Anyone who needs their computer to stay awake and active.</p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <div class="bg-slate-50 p-8 rounded-2xl border border-slate-200">
+                    <i data-lucide="briefcase" class="w-10 h-10 text-green-500 mb-4"></i>
+                    <h4 class="text-xl font-bold mb-2">Remote Workers</h4>
+                    <p class="text-slate-600">Keep your status "Active" on Slack, Teams, and other communication platforms, even when you step away for a coffee.</p>
+                </div>
+                <div class="bg-slate-50 p-8 rounded-2xl border border-slate-200">
+                    <i data-lucide="presentation" class="w-10 h-10 text-green-500 mb-4"></i>
+                    <h4 class="text-xl font-bold mb-2">Presenters & Educators</h4>
+                    <p class="text-slate-600">Deliver your presentation or online class without the screen dimming or locking during a Q&A session.</p>
+                </div>
+                <div class="bg-slate-50 p-8 rounded-2xl border border-slate-200">
+                    <i data-lucide="code-2" class="w-10 h-10 text-green-500 mb-4"></i>
+                    <h4 class="text-xl font-bold mb-2">Developers & IT Pros</h4>
+                    <p class="text-slate-600">Ensure long-running scripts, downloads, or data transfers complete without being interrupted by sleep mode.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- CTA Section -->
+    <section class="gradient-bg">
+        <div class="container mx-auto px-6 py-24 text-center">
+            <h3 class="text-4xl font-bold text-slate-900 mb-4">Ready to Take Control?</h3>
+            <p class="text-lg text-slate-600 max-w-2xl mx-auto mb-8">Download StayGreen today and say goodbye to unwanted screen locking. Boost your productivity and maintain your active status effortlessly.</p>
+            <a href="#" class="bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-8 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300 inline-flex items-center space-x-2 text-lg">
+                <i data-lucide="download"></i>
+                <span>Download for Free</span>
+            </a>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-slate-800 text-slate-400">
+        <div class="container mx-auto px-6 py-8 flex flex-col md:flex-row justify-between items-center">
+            <p>&copy; 2024 StayGreen. All Rights Reserved.</p>
+            <div class="flex space-x-6 mt-4 md:mt-0">
+                <a href="#" class="hover:text-white">Privacy Policy</a>
+                <a href="#" class="hover:text-white">Terms of Service</a>
+                <a href="#" class="hover:text-white">GitHub</a>
+            </div>
+        </div>
+    </footer>
+
+
+    <script>
+        lucide.createIcons();
+    </script>
+</body>
+</html>
