--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StayGreen - Keep Your Screen Awake</title>
+    <title>StayGreen - Keep Your Status Green</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,11 +51,11 @@
         <section class="container mx-auto px-6 py-24 md:py-32 flex flex-col md:flex-row items-center">
             <div class="md:w-1/2 text-center md:text-left">
                 <h2 class="text-4xl md:text-6xl font-extrabold text-slate-900 leading-tight mb-4">
-                    Keep Your Screen Awake.
-                    <span class="text-green-600">The Smart Way.</span>
+                    Keep Your Status Green.
+                    <span class="text-green-600">And Your Screen Awake.</span>
                 </h2>
                 <p class="text-lg text-slate-600 mb-8 max-w-xl mx-auto md:mx-0">
-                    StayGreen simulates realistic user activity to prevent your computer from sleeping. Perfect for remote work, presentations, and long-running tasks. No extra software needed on your PC!
+                    StayGreen keeps you 'Active' on Teams, Slack, and more by simulating realistic mouse and keyboard activity. Prevent your status from turning yellow and your computer from sleeping, all without installing any software on your work PC.
                 </p>
                 <div class="flex justify-center md:justify-start space-x-4">
                     <a href="#" class="bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300 flex items-center space-x-2">
@@ -88,7 +88,7 @@
                         <i data-lucide="mouse-pointer-2" class="w-8 h-8"></i>
                     </div>
                     <h4 class="text-2xl font-bold mb-3">Realistic Simulation</h4>
-                    <p class="text-slate-600">Generates human-like mouse movements, curved paths, scrolling, and typing to appear genuinely active.</p>
+                    <p class="text-slate-600">Generates human-like mouse movements and typing that communication apps recognize as genuine activity, keeping your status green.</p>
                 </div>
                 <!-- Feature 2 -->
                 <div class="bg-slate-50 p-8 rounded-2xl feature-card border border-slate-200">
@@ -176,8 +176,8 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="bg-slate-50 p-8 rounded-2xl border border-slate-200">
                     <i data-lucide="briefcase" class="w-10 h-10 text-green-500 mb-4"></i>
-                    <h4 class="text-xl font-bold mb-2">Remote Workers</h4>
-                    <p class="text-slate-600">Keep your status "Active" on Slack, Teams, and other communication platforms, even when you step away for a coffee.</p>
+                    <h4 class="text-xl font-bold mb-2">Maintaining Your Green Status</h4>
+                    <p class="text-slate-600">Effortlessly keep your status "Active" on Slack, Microsoft Teams, and other platforms. StayGreen ensures you appear online, giving you the freedom to step away without worrying about your status changing.</p>
                 </div>
                 <div class="bg-slate-50 p-8 rounded-2xl border border-slate-200">
                     <i data-lucide="presentation" class="w-10 h-10 text-green-500 mb-4"></i>
@@ -198,7 +198,7 @@
     <section class="gradient-bg">
         <div class="container mx-auto px-6 py-24 text-center">
             <h3 class="text-4xl font-bold text-slate-900 mb-4">Ready to Take Control?</h3>
-            <p class="text-lg text-slate-600 max-w-2xl mx-auto mb-8">Download StayGreen today and say goodbye to unwanted screen locking. Boost your productivity and maintain your active status effortlessly.</p>
+            <p class="text-lg text-slate-600 max-w-2xl mx-auto mb-8">Download StayGreen today and say goodbye to unwanted screen locking and yellow status indicators. Boost your productivity and maintain your active status effortlessly.</p>
             <a href="#" class="bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-8 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300 inline-flex items-center space-x-2 text-lg">
                 <i data-lucide="download"></i>
                 <span>Download for Free</span>
