--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 <!-- FAQ Item 1 -->
                 <div class="bg-[var(--surface)] p-6 rounded-lg scroll-animate">
                     <h4 class="font-bold text-lg text-[var(--on-surface)] mb-2">Is StayGreen detectable by my employer?</h4>
-                    <p class="text-[var(--on-surface-variant)]">StayGreen simulates a standard Bluetooth Keyboard/Mouse. It does not install any software on your computer, making it appear as a normal hardware device. The pro features add layers of human-like randomness to make the activity indistinguishable from manual use.</p>
+                    <p class="text-[var(--on-surface-variant)]">StayGreen simulates a standard Bluetooth Keyboard/Mouse. It does not install any software on your computer, making it appear as a normal hardware device. The pro features add layers of human-like randomness to make the activity indistinguishable from manual use.<span class="block mt-4 text-sm italic opacity-80">Disclaimer: While we've designed StayGreen to be as undetectable as possible, users should be aware of their company's specific policies and use the app at their own risk.</span></p>
                 </div>
                 <!-- FAQ Item 2 -->
                 <div class="bg-[var(--surface)] p-6 rounded-lg scroll-animate" style="transition-delay: 100ms;">
