--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <div class="md:w-1/2 mt-12 md:mt-0 flex justify-center">
-                <img src="https://placehold.co/450x600/1F3701/B1D18A?text=App+Screenshot" alt="StayGreen App Screenshot" class="rounded-2xl shadow-2xl" onerror="this.onerror=null;this.src='https://placehold.co/450x600/e2e8f0/475569?text=Image+Not+Found';">
+                <img src="appImage.jpg" alt="StayGreen App Screenshot" class="rounded-2xl shadow-2xl">
             </div>
         </section>
     </main>
