--- a/index.html
+++ b/index.html
@@ -361,6 +361,10 @@
                     <h4 class="font-bold text-lg text-[var(--on-surface)] mb-2">What are text profiles for?</h4>
                     <p class="text-[var(--on-surface-variant)]">Text profiles allow you to specify what text the app should type. You can add code snippets, notes, or any text you want. The app will randomly select from your saved profiles for its typing activity. Pro users can create unlimited profiles!</p>
                 </div>
+                <div class="bg-[var(--surface)] p-6 rounded-lg scroll-animate" style="transition-delay: 400ms;">
+                    <h4 class="font-bold text-lg text-[var(--on-surface)] mb-2">How is this different from a physical USB mouse jiggler?</h4>
+                    <p class="text-[var(--on-surface-variant)]">StayGreen offers more control and realism than most physical mouse jigglers. Instead of just nudging the cursor, it uses your phone to send undetectable, human-like inputs via Bluetooth. Plus, you get customizable features like text profiles and adjustable delays, all without occupying a USB port.</p>
+                </div>
             </div>
         </div>
     </section>
